--- a/index.html
+++ b/index.html
@@ -1,2 +1,10 @@
 <html>
+    <body>
+        <script>
+            const getData = async function () {
+                let data = await d3.csv("yelp_data.csv", d3.autotype);
+            }
+            getData()
+        </script>
+    </body>
 </html>
