--- a/index.html
+++ b/index.html
@@ -1,8 +1,60 @@
 <html>
     <body>
+        <style>
+            .left_panel {
+                display: flex;
+                flex-direction: column;
+                max-width: 75%;
+            }
+
+            .filter {
+                max-height: 35%;
+                max-width: 100%;
+            }
+            
+
+            .container {
+                display: flex;
+                flex-direction: row;
+                max-width: 90%;
+            }
+
+            .list {
+                max-width: 25%;
+            }
+
+            #map {
+                max-width: 100%;
+                max-height: 65%
+            }
+        </style>
+        <script src="https://d3js.org/d3.v5.min.js"></script>
+        <div class = "container"> 
+            <div class = "left_panel">
+                <div class ="filter">
+                    <h1> Filters </h1>
+                </div>
+                <svg id="map" ></svg>
+            </div>
+            <div class = "list">
+                <h1> List </h1>
+                <svg id="svglist"></svg>
+            </div>
+        </div>
         <script>
             const getData = async function () {
-                let data = await d3.csv("yelp_data.csv", d3.autotype);
+                let data = await d3.csv("yelp_boston.csv", d3.autotype);
+
+                console.log(d3.map(data, d=>d.latitude))
+                data.forEach((d)=>{
+                    d.LAT = parseInt(d.latitude)
+                    d.LONG = parseInt(d.longitude)
+                    d.RATING = parseInt(d.rating)
+                    d.REVIEW = parseInt(d.review_count)
+                    d.CAT = JSON.parse(d.categories)
+                    d.LOCATION = JSON.parse(d.location)
+                })
+                console.log(data);
             }
             getData()
         </script>
