--- a/index.html
+++ b/index.html
@@ -1,62 +1,71 @@
 <html>
-    <body>
-        <style>
-            .left_panel {
-                display: flex;
-                flex-direction: column;
-                max-width: 75%;
-            }
 
-            .filter {
-                max-height: 35%;
-                max-width: 100%;
-            }
-            
+<body>
+    <link rel="stylesheet" href="style.css">
 
-            .container {
-                display: flex;
-                flex-direction: row;
-                max-width: 90%;
-            }
+    <script src="https://d3js.org/d3.v5.min.js"></script>
+    <div class="container">
+        <div class="left_panel">
+            <div class="filter">
+                <div>
+                    <h1> &#128523 Boston Bites </h1>
+                    <label for="selectDistance">How far will you travel for food?</label>
 
-            .list {
-                max-width: 25%;
-            }
+                    <select name="select" id="selectDistance">
+                        <option value="1" selected>1 mile</option>
+                        <option value="2">2 miles</option>
+                        <option value="3">3 miles</option>
+                        <option value="4">4 miles</option>
+                        <option value="5">5 miles</option>
+                        <option value="all">everywhere in Boston</option>
+                    </select>
 
-            #map {
-                max-width: 100%;
-                max-height: 65%
-            }
-        </style>
-        <script src="https://d3js.org/d3.v5.min.js"></script>
-        <div class = "container"> 
-            <div class = "left_panel">
-                <div class ="filter">
-                    <h1> Filters </h1>
                 </div>
-                <svg id="map" ></svg>
-            </div>
-            <div class = "list">
-                <h1> List </h1>
-                <svg id="svglist"></svg>
-            </div>
-        </div>
-        <script>
-            const getData = async function () {
-                let data = await d3.csv("yelp_boston.csv", d3.autotype);
 
-                console.log(d3.map(data, d=>d.latitude))
-                data.forEach((d)=>{
-                    d.LAT = parseInt(d.latitude)
-                    d.LONG = parseInt(d.longitude)
-                    d.RATING = parseInt(d.rating)
-                    d.REVIEW = parseInt(d.review_count)
-                    d.CAT = JSON.parse(d.categories)
-                    d.LOCATION = JSON.parse(d.location)
-                })
-                console.log(data);
-            }
-            getData()
-        </script>
-    </body>
+
+                <div id = filter1>
+                    <div class='filter1child'>
+                        <h2>&#9749</h2>
+                        <h3>Cafes & Bakeries</h3>
+                    </div>
+                    <div class='filter1child'>
+                        <h2>&#129365</h2>
+                        <h3>Markets</h3>
+                    </div>
+                    <div class='filter1child'>
+                        <h2>&#127860</h2>
+                        <h3>Restaurants</h3>
+                    </div>
+                    
+                </div>
+
+            </div>
+
+        </div>
+        <svg id="map"></svg>
+    </div>
+    <div class="list">
+        <h1> List </h1>
+        <svg id="svglist"></svg>
+    </div>
+    </div>
+    <script>
+        const getData = async function () {
+            let data = await d3.csv("yelp_boston.csv", d3.autotype);
+
+            console.log(d3.map(data, d => d.latitude))
+            data.forEach((d) => {
+                d.LAT = parseInt(d.latitude)
+                d.LONG = parseInt(d.longitude)
+                d.RATING = parseInt(d.rating)
+                d.REVIEW = parseInt(d.review_count)
+                d.CAT = JSON.parse(d.categories)
+                d.LOCATION = JSON.parse(d.location)
+            })
+            console.log(data);
+        }
+        getData()
+    </script>
+</body>
+
 </html>
