--- a/index.html
+++ b/index.html
@@ -1,54 +1,13 @@
 <html>
 
 <body>
-    <style>
-        .left_panel {
-            display: flex;
-            flex-direction: column;
-            max-width: 75%;
-
-        }
-
-        .filter {
-            max-height: 35%;
-            max-width: 100%;
-        }
-
-
-        .container {
-            display: flex;
-            flex-direction: row;
-            max-width: 90%;
-            height: 150vh;
-
-        }
-
-        .list {
-            max-width: 25%;
-        }
-
-        #map {
-            max-width: 100%;
-            max-height: 65%
-        }
-
-        .graticule {
-            fill: grey;
-            stroke: lightgrey;
-        }
-
-        .zip-outline {
-            stroke: lightgrey;
-            stroke-width: .5px;
-            fill: none;
-        }
-    </style>
-
+    <link rel="stylesheet" href="style.css">
     <script src="https://d3js.org/d3.v5.min.js"></script>
+    <script src="https://d3js.org/topojson.v3.min.js"></script>
     <div class="container">
         <div class="left_panel">
             <div class="filter">
-                <div>
+                <div id = 'header'>
                     <h1> &#128523 Boston Bites </h1>
                     <label for="selectDistance">How far will you travel for food?</label>
 
@@ -60,10 +19,7 @@
                         <option value="5">5 miles</option>
                         <option value="all">everywhere in Boston</option>
                     </select>
-
                 </div>
-
-
                 <div id = filter1>
                     <div class='filter1child'>
                         <h2>&#9749</h2>
@@ -77,81 +33,93 @@
                         <h2>&#127860</h2>
                         <h3>Restaurants</h3>
                     </div>
-                    
-                </div>
-
+                    </div>
             </div>
-
+            <div>
+                <svg id="map" width=1000 height=700></svg>
+            </div>
+     
         </div>
-        <svg id="map"></svg>
-    </div>
-    <div class="list">
-        <h1> List </h1>
-        <svg id="svglist"></svg>
-    </div>
-    </div>
-    <script>
-        const getData = async function () {
-            let data = await d3.csv("yelp_boston.csv", d3.autotype);
-
-            console.log(d3.map(data, d => d.latitude))
-            data.forEach((d) => {
-                d.LAT = parseInt(d.latitude)
-                d.LONG = parseInt(d.longitude)
-                d.RATING = parseInt(d.rating)
-                d.REVIEW = parseInt(d.review_count)
-                d.CAT = JSON.parse(d.categories)
-                d.LOCATION = JSON.parse(d.location)
-                d.POSITION = [d.LOCATION['coordinate']['longitude'] , d.LOCATION['coordinate']['latitude']];
-            })
-            console.log(data);
-
-            var zips = topojson.feature(boston, boston.objects.Boston_Street_Segments);
-            var zipsMesh = topojson.mesh(boston, boston.objects.Boston_Street_Segments);
-
-            var states = topojson.feature(boston, boston.objects.City_of_Boston_Boundary);
-            var stateMesh = topojson.mesh(boston, boston.objects.City_of_Boston_Boundary);
-
-            var projection = d3.geoMercator().fitSize([mapWidth, mapHeight], zips);
-            var path = d3.geoPath().projection(projection);
+        <div class="list">
+            <h1> List </h1>
+            <svg id="svglist"></svg>
+        </div>
+        <script>
+            const getData = async function () {
+                const svg = d3.select("#map");
+                const width = svg.attr("width");
+                const height = svg.attr("height");
+                const margin = { top: 20, right: 20, bottom: 20, left: 20 };
+                const mapWidth = width - margin.left - margin.right;
+                const mapHeight = height - margin.top - margin.bottom;
+                const map = svg.append("g")
+                    .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
 
-            let viewport = map.append("g");
+                let data = await d3.csv("yelp_boston.csv", d3.autotype);
+                const boston = await d3.json("output.json");
 
-            viewport.append("path")
-                .attr("class", "graticule")
-                .attr("d", path(d3.geoGraticule10()));
-
-
-            viewport.append("path")
-                .datum(stateMesh)
-                .attr("class", "state-outline")
-                .attr("d", path);
-
-            viewport.selectAll(".zip").data(zips.features)
-                .join("path")
-                .attr("class", "zip")
-                .attr("fill", "None")
-                .attr('stroke', 'None')
-                .attr("d", path);
-
-            viewport.append("path")
-                .datum(zipsMesh)
-                .attr("class", "zip-outline")
-                .attr("d", path);
+                console.log(boston);
 
 
-            map.selectAll("circle").data(data)
-                .join("circle")
-                .attr("r", 1.5)
-                .attr("cx", d => projection(d.POSITION)[0])
-                .attr("cy", d => projection(d.POSITION)[1])
-                .attr("fill", "red");
+                console.log(d3.map(data, d => d.latitude))
+                data.forEach((d) => {
+                    d.LAT = parseInt(d.latitude)
+                    d.LONG = parseInt(d.longitude)
+                    d.RATING = parseInt(d.rating)
+                    d.REVIEW = parseInt(d.review_count)
+                    d.CAT = JSON.parse(d.categories)
+                    d.LOCATION = JSON.parse(d.location)
+                    d.POSITION = [d.LOCATION['coordinate']['longitude'], d.LOCATION['coordinate']['latitude']];
+                })
+                console.log(data);
+
+                var zips = topojson.feature(boston, boston.objects.Boston_Street_Segments);
+                var zipsMesh = topojson.mesh(boston, boston.objects.Boston_Street_Segments);
+
+                var states = topojson.feature(boston, boston.objects.City_of_Boston_Boundary);
+                var stateMesh = topojson.mesh(boston, boston.objects.City_of_Boston_Boundary);
+
+                var projection = d3.geoMercator().fitSize([mapWidth, mapHeight], zips);
+                var path = d3.geoPath().projection(projection);
 
 
-        }
-        getData()
-    </script>
+                let viewport = map.append("g");
+
+                viewport.append("path")
+                    .attr("class", "graticule")
+                    .attr("d", path(d3.geoGraticule10()));
+
+
+                viewport.append("path")
+                    .datum(stateMesh)
+                    .attr("class", "state-outline")
+                    .attr("d", path);
+
+                viewport.selectAll(".zip").data(zips.features)
+                    .join("path")
+                    .attr("class", "zip")
+                    .attr("fill", "None")
+                    .attr('stroke', 'None')
+                    .attr("d", path);
+
+                viewport.append("path")
+                    .datum(zipsMesh)
+                    .attr("class", "zip-outline")
+                    .attr("d", path);
+
+
+                map.selectAll("circle").data(data)
+                    .join("circle")
+                    .attr("r", 1.5)
+                    .attr("cx", d => projection(d.POSITION)[0])
+                    .attr("cy", d => projection(d.POSITION)[1])
+                    .attr("fill", "red");
+
+
+            }
+            getData()
+        </script>
 </body>
 
 </html>
