--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
 
-                let data = await d3.csv("yelp_boston.csv", d3.autotype);
+                let data = await d3.csv("boston_clean.csv", d3.autotype);
                 const boston = await d3.json("output-2.json");
 
                 console.log(boston);
