--- a/index.html
+++ b/index.html
@@ -215,57 +215,57 @@
                 // goal is to make a default size for each mile radius (1, 2, 5)
 
                 // appending a g tag to the map for the brush to go
-                let brushGroup = map.append("g").attr("class", "brush");
+                // let brushGroup = map.append("g").attr("class", "brush");
 
 
 
-                // make a default brush
-                let brush = d3.brushY()
-                    .extent([[0, 0], [mapWidth, mapHeight]])
-                    .on("start", startbrush)
-                    .on("brush", brushed)
-                    .on("end", endbrush);
+                // // make a default brush
+                // let brush = d3.brushY()
+                //     .extent([[0, 0], [mapWidth, mapHeight]])
+                //     .on("start", startbrush)
+                //     .on("brush", brushed)
+                //     .on("end", endbrush);
 
-                // call brush on g tag on map
-                brushGroup.call(brush);
+                // // call brush on g tag on map
+                // brushGroup.call(brush);
 
-                // brush functions
-                let currentBrush;
-                function startbrush() {
-                    if (currentBrush != this) {
-                        d3.select(currentBrush).call(this.brush.clear);
-                        currentBrush = this;
-                    }
-                }
+                // // brush functions
+                // let currentBrush;
+                // function startbrush() {
+                //     if (currentBrush != this) {
+                //         d3.select(currentBrush).call(this.brush.clear);
+                //         currentBrush = this;
+                //     }
+                // }
 
-                function endbrush() {
-                    if (d3.brushSelection(this) === null) {
-                        updatePointAppearance();
-                    }
-                    else { }
-                }
+                // function endbrush() {
+                //     if (d3.brushSelection(this) === null) {
+                //         updatePointAppearance();
+                //     }
+                //     else { }
+                // }
 
-                function brushed() {
-                    if (d3.brushSelection(this) === null) return;
-                    updatePointAppearance();
-                    generateRestaurants();
-                }
+                // function brushed() {
+                //     if (d3.brushSelection(this) === null) return;
+                //     updatePointAppearance();
+                //     generateRestaurants();
+                // }
 
-                // the points that are selected will change color
-                function updatePointAppearance() {
-                    map.selectAll(".dots")
-                        .attr("fill", d => {
-                            if (d3.this()){
-                                return "green";
-                            }
-                            else return "red";
-                        });
-                }
+                // // the points that are selected will change color
+                // function updatePointAppearance() {
+                //     map.selectAll(".dots")
+                //         .attr("fill", d => {
+                //             if (d3.this()){
+                //                 return "green";
+                //             }
+                //             else return "red";
+                //         });
+                // }
 
-                // function to return the information of the restaurants inside the brush
-                function generateRestaurants(){
+                // // function to return the information of the restaurants inside the brush
+                // function generateRestaurants(){
 
-                }
+                // }
 
 
             }
