--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
 
                 let data = await d3.csv("boston_clean.csv", d3.autotype);
-                const boston = await d3.json("output-2.json");
+                const boston = await d3.json("output-6.json");
 
                 console.log(boston);
 
@@ -129,6 +129,7 @@
                     .attr("d", path);
 
 
+
                 viewport.selectAll("circle").data(data)
                     .join("circle")
                     .attr("class", "dots")
@@ -150,8 +151,8 @@
                     viewport.select(".zip-outline")
                         .style("stroke-width", 0.5 / event.transform.k);
 
-                    viewport.selectAll("circle.dots")
-                        .attr("r", 1.5 / event.transform.k);
+                    // viewport.selectAll("circle.dots")
+                    //     .attr("r", 1.5 / event.transform.k);
                 }
 
 
@@ -179,96 +180,109 @@
 
                     viewport.append("circle")
                         .attr("class", "radius_circle")
-                        .attr("cx", event.offsetX)
-                        .attr("cy", event.offsetY)
-                        .attr("r", 10);
-                        // .call(drag);
+                        .attr("cx", d3.pointer(event)[0])
+                        .attr("cy", d3.pointer(event)[1])
+                        .attr("r", 10)
+                        .on("mousedown", function (event) {
+                            event.stopPropagation();
+                            console.log('click', d3.pointer(event))
+                            d3.select(this)
+                                .on("mousemove", function (event) {
+                                    event.stopPropagation();
+                                    console.log('move', d3.pointer(event))
+                                    d3.select(this)
+                                        .attr("cx", d3.pointer(event)[0])
+                                        .attr("cy", d3.pointer(event)[1]);
+                                })
+                        })
+                })
+                // .call(drag);
 
-                });
-
-
-                // function drag() {
-                //     function dragStarted(event, d){
-                //         d3.select(this).raise().attr("stroke", "black");
-                //     }
-
-                //     function dragged(event, d){
-                //         d3.select(this).attr("cx", d.x = event.x).attr("cy", d.y = event.y);
-                //     }
-
-                //     function dragEnded(event, d) {
-                //         d3.select(this).attr("stroke", null);
-                //     }
-
-                //     return d3.drag()
-                //             .on("start", dragStarted)
-                //             .on("drag", dragged)
-                //             .on("end", dragEnded)
-                // }
+            };
 
 
+            // function drag() {
+            //     function dragStarted(event, d){
+            //         d3.select(this).raise().attr("stroke", "black");
+            //     }
+
+            //     function dragged(event, d){
+            //         d3.select(this).attr("cx", d.x = event.x).attr("cy", d.y = event.y);
+            //     }
+
+            //     function dragEnded(event, d) {
+            //         d3.select(this).attr("stroke", null);
+            //     }
+
+            //     return d3.drag()
+            //             .on("start", dragStarted)
+            //             .on("drag", dragged)
+            //             .on("end", dragEnded)
+            // }
 
 
 
 
-                // making a brush for the map 
-                // goal is to make a default size for each mile radius (1, 2, 5)
-
-                // appending a g tag to the map for the brush to go
-                // let brushGroup = map.append("g").attr("class", "brush");
 
 
+            // making a brush for the map 
+            // goal is to make a default size for each mile radius (1, 2, 5)
 
-                // // make a default brush
-                // let brush = d3.brushY()
-                //     .extent([[0, 0], [mapWidth, mapHeight]])
-                //     .on("start", startbrush)
-                //     .on("brush", brushed)
-                //     .on("end", endbrush);
-
-                // // call brush on g tag on map
-                // brushGroup.call(brush);
-
-                // // brush functions
-                // let currentBrush;
-                // function startbrush() {
-                //     if (currentBrush != this) {
-                //         d3.select(currentBrush).call(this.brush.clear);
-                //         currentBrush = this;
-                //     }
-                // }
-
-                // function endbrush() {
-                //     if (d3.brushSelection(this) === null) {
-                //         updatePointAppearance();
-                //     }
-                //     else { }
-                // }
-
-                // function brushed() {
-                //     if (d3.brushSelection(this) === null) return;
-                //     updatePointAppearance();
-                //     generateRestaurants();
-                // }
-
-                // // the points that are selected will change color
-                // function updatePointAppearance() {
-                //     map.selectAll(".dots")
-                //         .attr("fill", d => {
-                //             if (d3.this()){
-                //                 return "green";
-                //             }
-                //             else return "red";
-                //         });
-                // }
-
-                // // function to return the information of the restaurants inside the brush
-                // function generateRestaurants(){
-
-                // }
+            // appending a g tag to the map for the brush to go
+            // let brushGroup = map.append("g").attr("class", "brush");
 
 
-            }
+
+            // // make a default brush
+            // let brush = d3.brushY()
+            //     .extent([[0, 0], [mapWidth, mapHeight]])
+            //     .on("start", startbrush)
+            //     .on("brush", brushed)
+            //     .on("end", endbrush);
+
+            // // call brush on g tag on map
+            // brushGroup.call(brush);
+
+            // // brush functions
+            // let currentBrush;
+            // function startbrush() {
+            //     if (currentBrush != this) {
+            //         d3.select(currentBrush).call(this.brush.clear);
+            //         currentBrush = this;
+            //     }
+            // }
+
+            // function endbrush() {
+            //     if (d3.brushSelection(this) === null) {
+            //         updatePointAppearance();
+            //     }
+            //     else { }
+            // }
+
+            // function brushed() {
+            //     if (d3.brushSelection(this) === null) return;
+            //     updatePointAppearance();
+            //     generateRestaurants();
+            // }
+
+            // // the points that are selected will change color
+            // function updatePointAppearance() {
+            //     map.selectAll(".dots")
+            //         .attr("fill", d => {
+            //             if (d3.this()){
+            //                 return "green";
+            //             }
+            //             else return "red";
+            //         });
+            // }
+
+            // // function to return the information of the restaurants inside the brush
+            // function generateRestaurants(){
+
+            // }
+
+
+
             getData()
         </script>
 </body>
