--- a/index.html
+++ b/index.html
@@ -211,6 +211,10 @@
                     
                     
                 })
+
+                // Find what restaurants are contained within the circle
+                console.log(viewport.selectAll("circle.radius_circle"));
+
             };
 
 
